<resources>
    <string name="app_name">Win Pakistan Lottery</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="start">Start</string>
    <string name="slide_1_title">Participate and Win Huge Gifts</string>
    <string name="slide_1_desc">Enjoy</string>
    <string name="slide_2_desc">second detail page</string>
    <!--    SharedPreferences-->
    <string name="preferance_name">Login</string>
    <string name="preferance_key_isEnable">IsAutoLoginEnable</string>
    <string name="preferance_key_UserData">UserData</string>
    <string name="preferance_key_NewUser">isNewUser</string>
    <string name="preferance_key_WelcomeScreen">isScreenEnable</string>
    <string name="preferance_luckyDraw">LuckyDrawData</string>
    <string name="preferance_luckyDraw_data_availble">IsDataAvailable</string>

<!--    Login Activity Screen-->
    <string name="snackbarValidationErrorUser">Incorrect user!</string>
    <string name="snackbarValidationErrorPass">Incorrect password!</string>
    <string name="snackbarLoginSuccessfull">Login Successful!</string>
    <!--    Signup Activity Screen-->
    <string name="snackbarSignupModelValidation">Incorrect Data</string>
    <string name="snackbarSignupModelValidationUser">Incorrect Username</string>
    <string name="snackbarSignupModelValidationPass">Incorrect Password</string>
    <string name="snackbarSignupModelValidationFullName">Incorrect Full Name</string>
    <string name="snackbarSignupModelValidationAge">Incorrect Age</string>
    <string name="snackbarSignupModelValidationDOB">Incorrect DOB</string>
    <string name="snackbarSignupModelValidationContact">Incorrect Contact</string>
    <string name="snackbarSignupModelValidationGender">Incorrect Gender</string>
    <string name="snackbarServerNotRepsond">Sorry! Server is not responding now.</string>
    <!--    Signup Screen XML-->
    <string name="UserName">UserName</string>
    <string name="select_username">Select username</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_name">Type your Name</string>
    <string name="date_of_birth">Date OF Birth</string>
    <string name="click_to_select_dob">Click to Select DOB</string>
    <string name="contact">Contact</string>
    <string name="type_your_contact">Type your Mobile no.</string>
    <string name="email_optional">Email (optional)</string>
    <string name="password">Password</string>
    <string name="full_address">Full Address</string>
    <string name="address_location">Address / Location</string>
    <string name="type_your_address">Type your Address</string>
    <string name="choose_your_gender">Choose Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an Account!</string>
    <string name="click_here">Click Here</string>
    <string name="points">Points</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
<!--API String-->
    <string name="WorldTimeSpanUrl">http://worldtimeapi.org/api/timezone/Asia/</string>
    <string name="ServerBaseUrl">http://orange-ltd.com/api/</string>
    <string name="ServerBaseUrlImage">http://orange-ltd.com/public/profile_image/</string>
    <string name="enter_username">Enter Username</string>
    <string name="e_g_03133106243">e.g 03133106243</string>
    <string name="phone">Phone</string>
    <string name="e_g_house_no_1_street_abc_etc">e.g House no.1 Street ABC etc</string>
    <string name="e_g_30">e.g 30</string>
    <string name="no_internet_Message">No Internet Found!</string>
    <string name="gender">Gender</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="participate">participate</string>
    <string name="drawtime_text">00:00:00</string>
    <string name="your_full_name_here">Your Full Name Here</string>
    <string name="token_text">0</string>
    <string name="ticket">Ticket</string>
    <string name="balance">Balance</string>
    <string name="balance_value">0</string>
    <string name="this_week_participant">This Week participant</string>
    <string name="current_game">Current Game</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="points_value">0</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="date_formate">yyyy-MM-dd HH:mm:ss</string>
    <string name="default_timer">00:00:00</string>
    <string name="dummy_img_url">https://cdn4.vectorstock.com/i/1000x1000/57/83/win-prizes-3d-gold-badge-with-red-ribbon-vector-16325783.jpg</string>
</resources>