<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activites.SignUpActivity">

<ScrollView
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/black"
        app:layout_constraintHeight_percent="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtcreataccount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="Create New Account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        </TextView>
        <ImageView

            android:id="@+id/logo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <LinearLayout


            android:id="@+id/loginlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="10sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo2"
            app:layout_constraintWidth_percent="0.8">
            <!-- <TextView
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:text="@string/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <EditText
                android:textColor="@color/white"
                android:drawablePadding="20sp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:textSize="15sp"
                android:paddingStart="1dp"
                android:hint="@string/select_username"

                android:textColorHint="@color/gray_border"
                android:id="@+id/edtusername"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/full_name"
                android:textColor="@color/yellow"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/edtname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20sp"

                android:hint="@string/type_your_name"
                android:paddingStart="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_border"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/yellow"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/dtdob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="20sp"
                android:hint="@string/click_to_select_dob"
                android:onClick="SetDOB"
                android:paddingStart="1dp"
                android:paddingTop="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_border"
                android:textSize="15sp"
                app:drawableStartCompat="@android:drawable/ic_menu_my_calendar"
                tools:ignore="RtlSymmetry,UsingOnClickInXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textColor="@color/yellow"
                android:textStyle="bold">

            </TextView>

            <EditText

                android:id="@+id/edtcontact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_phone_callback_24"
                android:drawablePadding="20sp"
                android:hint="@string/type_your_contact"
                android:inputType="number"
                android:paddingStart="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_border"
                android:textSize="15sp">

            </EditText>
            <!-- <TextView
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:text="@string/email_optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <EditText

                android:textSize="15sp"
                android:textColor="@color/white"

                android:drawablePadding="20sp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:inputType="textEmailAddress"

                android:paddingStart="1dp"
                android:hint="@string/type_your_contact"

                android:textColorHint="@color/gray_border"
                android:id="@+id/edtemail"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="RtlSymmetry">

            </EditText>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/yellow"
                android:textStyle="bold">

            </TextView>

            <EditText

                android:id="@+id/edtpassword"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="20sp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_border"
                android:textSize="15sp">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address_location"
                android:textColor="@color/yellow"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/edtaddress"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="20sp"
                android:hint="@string/type_your_address"
                android:inputType="textPostalAddress"
                android:paddingStart="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_border"
                android:textSize="15sp">

            </EditText>

            <!-- <TextView
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/yellow"
                android:text="@string/choose_your_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

                <RadioGroup
                    android:id="@+id/rdgender"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioButton
                        android:id="@+id/rdmale"
                        android:paddingStart="10dp"
                        android:buttonTint="@color/yellow"
                        android:textColor="@color/yellow"
                        android:text="Male "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </RadioButton>
                    <RadioButton
                        android:id="@+id/rdfemale"
                        android:paddingLeft="10dp"
                        android:buttonTint="@color/yellow"
                        android:textColor="@color/yellow"
                        android:text="Female "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </RadioButton>

                </RadioGroup>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textColor="@color/yellow"
                android:visibility="gone">

            </TextView>

            <EditText
                android:id="@+id/edtage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20sp"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:paddingStart="1dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_border"
                android:textSize="15sp"
                android:visibility="gone">

            </EditText>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/walletcardbackround"
                android:onClick="OnClickedCreateAccount"
                android:text="Create Account"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="OR"
                android:textColor="@color/bluehard">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Already have an Account!"
                    android:textColor="@color/bluehard">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:onClick="alreadyaccount"
                    android:text="Click Here"
                    android:textColor="@color/swipe_refresh_red"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animatedLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>